AM_CPPFLAGS = -Wall -std=c99 -I../vendor/vstsdk2.4/pluginterfaces/vst2.x -O3
AM_LDFLAGS =

bin_PROGRAMS = mrswatson
mrswatson_SOURCES = AudioClock.c AudioSettings.c BuildInfo.c CharString.c EventLogger.c LinkedList.c MidiEvent.c MidiSequence.c MidiSource.c MidiSourceFile.c MrsWatson.c PlatformUtilities.c Plugin.c PluginChain.c PluginPreset.c PluginPresetFxp.c PluginVst2x.cpp ProgramOption.c SampleBuffer.c SampleSource.c SampleSourcePcm.c SampleSourceSilence.c StringUtilities.c TaskTimer.c Vst2xHostCallback.cpp
